Actualize maven state with gradle state