@@ -12,6 +12,7 @@ import java.util.List;
 import java.util.Properties;
 import java.util.UUID;
 import java.util.function.Consumer;
+import java.util.function.Predicate;
 import java.util.function.Supplier;
 import org.mockito.Mockito;
 import org.mockito.internal.util.MockUtil;
@@ -34,7 +35,6 @@ import org.testcontainers.junit.jupiter.Testcontainers;
 @AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
 @Testcontainers
 @DirtiesContext
-@SuppressWarnings("unchecked")
 public abstract class MysqlTestModelFactory extends TestModelFactory {
     private static final String TEST_DB_DOCKER_IMAGE_NAME = "mysql:8.0";
     private static final String TEST_DB_DOCKER_CONTAINER_NAME = "school-test-database";
@@ -50,9 +50,7 @@ public abstract class MysqlTestModelFactory extends TestModelFactory {
 
     @DynamicPropertySource
     static void databaseProperties(DynamicPropertyRegistry registry) {
-        final Supplier<Object> jdbcUrlSupplier =
-                () -> database.getJdbcUrl()  + "?verifyServerCertificate=false&useSSL=false&requireSSL=false";
-        registry.add("spring.datasource.url", jdbcUrlSupplier);
+        registry.add("spring.datasource.url", database::getJdbcUrl);
         registry.add("spring.datasource.username", database::getUsername);
         registry.add("spring.datasource.password", database::getPassword);
     }
@@ -91,7 +89,7 @@ public abstract class MysqlTestModelFactory extends TestModelFactory {
             if (ObjectUtils.isEmpty(entities)) {
                 return null;
             }
-            final T entity = entities.get(0);
+            final T entity = entities.getFirst();
             if (refreshEntity != null) {
                 refreshEntity.accept(entity);
             }
@@ -116,6 +114,7 @@ public abstract class MysqlTestModelFactory extends TestModelFactory {
         }
     }
 
+    @SuppressWarnings("unchecked")
     protected <T> void deleteEntities(Class<T> entityClass) {
         EntityManager em = entityManagerFactory.createEntityManager();
         CriteriaBuilder criteriaBuilder = em.getCriteriaBuilder();
@@ -123,7 +122,7 @@ public abstract class MysqlTestModelFactory extends TestModelFactory {
         Root<T> entityRoot = criteriaQuery.from(entityClass);
         criteriaQuery.select(entityRoot);
         Query query = em.createQuery(criteriaQuery);
-        try{
+        try {
             EntityTransaction transaction = em.getTransaction();
             transaction.begin();
             List<T> entities = query.getResultList();
@@ -138,26 +137,19 @@ public abstract class MysqlTestModelFactory extends TestModelFactory {
         }
     }
 
-    protected <T> boolean isEmpty(Class<T> entityClass) {
-        return findAllFor(entityClass).isEmpty();
-    }
-
-    protected <T> List<T>  findAllFor(Class<T> entityClass) {
-        return findAllFor(entityClass, null);
-    }
-        protected <T> List<T>  findAllFor(Class<T> entityClass, Consumer<T> refreshEntity) {
+    protected <T> List<T> findFor(Class<T> entityType, Predicate<T> predicate, Consumer<T> refresh) {
         EntityManager em = entityManagerFactory.createEntityManager();
         CriteriaBuilder criteriaBuilder = em.getCriteriaBuilder();
-        CriteriaQuery<T> criteriaQuery = criteriaBuilder.createQuery(entityClass);
-        Root<T> entityRoot = criteriaQuery.from(entityClass);
+        CriteriaQuery<T> criteriaQuery = criteriaBuilder.createQuery(entityType);
+        Root<T> entityRoot = criteriaQuery.from(entityType);
         criteriaQuery.select(entityRoot);
         TypedQuery<T> query = em.createQuery(criteriaQuery);
-        try{
+        try {
             EntityTransaction transaction = em.getTransaction();
             transaction.begin();
-            List<T> entities = query.getResultList();
-            if (refreshEntity != null) {
-                entities.forEach(refreshEntity);
+            List<T> entities = query.getResultList().stream().filter(predicate).toList();
+            if (refresh != null) {
+                entities.forEach(refresh);
             }
             em.clear();
             transaction.commit();
@@ -165,6 +157,24 @@ public abstract class MysqlTestModelFactory extends TestModelFactory {
         } finally {
             em.close();
         }
+    }
+
+    protected <T> List<T> findFor(Class<T> entityType, Predicate<T> predicate) {
+        return findFor(entityType, predicate, _ -> {
+        });
+    }
+
+    protected <T> boolean isEmpty(Class<T> entityClass) {
+        return findAllFor(entityClass).isEmpty();
+    }
+
+    protected <T> List<T> findAllFor(Class<T> entityClass) {
+        return findAllFor(entityClass, _ -> {
+        });
+    }
+
+    protected <T> List<T> findAllFor(Class<T> entityClass, Consumer<T> refreshEntity) {
+        return findFor(entityClass, _ -> true, refreshEntity);
     }
 
     protected <T> T transactional(Supplier<T> activity) {
@@ -180,14 +190,15 @@ public abstract class MysqlTestModelFactory extends TestModelFactory {
 
     @Autowired
     PlatformTransactionManager ptm;
+
     protected Object transactCommand(final Object targetBean) {
         TransactionInterceptor interceptor = new TransactionInterceptor();
         interceptor.setTransactionManager(ptm);
         // Configure transaction attributes for methods if needed
         // Example:
-         Properties transactionAttributes = new Properties();
-         transactionAttributes.setProperty("execute*", "PROPAGATION_REQUIRES_NEW");
-         interceptor.setTransactionAttributes(transactionAttributes);
+        Properties transactionAttributes = new Properties();
+        transactionAttributes.setProperty("execute*", "PROPAGATION_REQUIRES_NEW");
+        interceptor.setTransactionAttributes(transactionAttributes);
         interceptor.afterPropertiesSet();
         final Object realBean = MockUtil.isSpy(targetBean)
                 ?
